--- a/site/lobbyists/index.html
+++ b/site/lobbyists/index.html
@@ -18,110 +18,33 @@
     <script src="http://d3js.org/queue.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script>
     <script src="/js/lobbyists.js" type='text/javascript'></script>
-
-    <style type="text/css">
-        html {
-            min-width: 1040px;
-        }
-
-        body {
-            background: #fcfcfa;
-            font-family: Helvetica, Arial, sans-serif;
-            margin: 1em auto 2em 1em;
-            position: relative;
-            width: 1100px;
-        }
-
-        header,
-        footer {
-            font-weight: bolder;
-            font-size: 20px;
-            color: #000;
-            font-family: "PT Sans", sans-serif;
-        }
-
-        a {
-            color: steelblue;
-        }
-
-        svg {
-            font: 500 12px "arial", sans-serif;
-            fill: #023858;
-        }
-
-        #chart {
-            height: 700px;
-        }
-
-        .columnHead {
-            font-family: Helvetica, Arial, sans-serif;
-            font-size: 13px;
-        }
-
-
-        .node rect {
-            cursor: move;
-            fill-opacity: .75;
-            shape-rendering: crispEdges;
-        }
-
-        .node text {
-            pointer-events: none;
-            text-shadow: 0 1px 0 #fff;
-        }
-
-        .link {
-            fill: none;
-            stroke: #969696;
-            stroke-opacity: .2;
-        }
-
-            .link:hover {
-                stroke-opacity: .5;
-            }
-
-        .totalBudget {
-            font-weight: bolder;
-            fill: #bd9e39;
-            color: #bd9e39;
-            left: 0px;
-            position: absolute;
-            width: 200px;
-        }
-
-        .instructionAndOperations {
-            font-weight: bold;
-            fill: #ad494a;
-            color: #ad494a;
-            left: 210px;
-            position: absolute;
-            width: 200px;
-        }
-
-        .uses {
-            font-weight: bold;
-            fill: #637939;
-            color: #637939;
-            left: 475px;
-            position: absolute;
-            width: 200px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/layout.css">
 </head>
 <body>
+    <div class="container">
 
-    <header>
-        <b>Former Lobbyists in Trump Administration</b>
-        <p>
-    </header>
+        <div class="title">
+            Former Lobbyists in Trump Administration
+        </div>
 
-    <div class="columnHead">
+        <div class="agency">
+            Department of Agriculture
+        </div>
+
+        <!--<div class="columnHead">
         <span class="totalBudget">Client</span>
         <span class="instructionAndOperations">Lobbying Firm</span>
         <span class="uses">Lobbyist</span>
+        </div>-->
+
+        <div id="bars" class="agencies">
+        </div>
+
+        <div id="chart" class="sankey">
+        </div>
+
     </div>
-    <p id="chart">
-        
 </body>
 </html>
 
