--- a/site/lobbyists/index.html
+++ b/site/lobbyists/index.html
@@ -28,10 +28,6 @@
             Former Lobbyists in Trump Administration
         </div>
 
-        <div class="agency">
-            Department of Agriculture
-        </div>
-
         <!--<div class="columnHead">
         <span class="totalBudget">Client</span>
         <span class="instructionAndOperations">Lobbying Firm</span>
@@ -40,10 +36,11 @@
 
         <div id="bars" class="agencies">
         </div>
-
-        <div id="chart" class="sankey">
+            <div id="chart" class="sankey">
+                <div id="agencyName" class="agency">
+                    Department of Agriculture
+                </div>
         </div>
-
     </div>
 </body>
 </html>
