Fix capitalization on Lobbyists

--- a/site/lobbyists/index.html
+++ b/site/lobbyists/index.html
@@ -38,7 +38,7 @@
         </div>
             <div id="chart" class="sankey">
                 <div id="agencyName" class="agency">
-                    Department of Agriculture
+                    The Agency
                 </div>
         </div>
     </div>
