--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8">
     <title>Former Lobbyists in the Trump Administration</title>
     <script src="https://d3js.org/d3.v3.min.js"></script>    
-    <script src="http://d3js.org/queue.v1.min.js"></script>
+    <script src="https://d3js.org/queue.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script>
     
     <script src="/site/lobbyists/lib/sankey.js"></script>
