--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
 <head>
     <meta charset="utf-8">
     <title>Former Lobbyists in the Trump Administration</title>
-    <script src="https://d3js.org/d3.v3.min.js"></script>    
+    <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="https://d3js.org/queue.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script>
-    
+
     <script src="/site/lobbyists/lib/sankey.js"></script>
     <script src="/site/lobbyists/js/lobbyists.js" type='text/javascript'></script>
 
     <link rel="stylesheet" type="text/css" href="/site/lobbyists/css/style.css">
     <link rel="stylesheet" type="text/css" href="/site/lobbyists/css/layout.css">
+
+    <script src="trump-town/site/lobbyists/lib/sankey.js"></script>
+    <script src="trump-town/site/lobbyists/js/lobbyists.js" type='text/javascript'></script>
+
+    <link rel="stylesheet" type="text/css" href="trump-town/site/lobbyists/css/style.css">
+    <link rel="stylesheet" type="text/css" href="trump-town/site/lobbyists/css/layout.css">
 </head>
 <body>
     <div class="container">
