--- a/index-local.html
+++ b/index-local.html
@@ -31,18 +31,26 @@
         </div>
 
 
-        <!--<div class="columnHead">
-        <span class="totalBudget">Client</span>
-        <span class="instructionAndOperations">Lobbying Firm</span>
-        <span class="uses">Lobbyist</span>
-        </div>-->
-
         <div id="bars" class="agencies">
         </div>
+
+        <div id="agencyName" class="agency">
+            The Agency
+        </div>
+
+        <div id="client" class="client">
+            Client
+        </div>
+
+        <div id="lobbyingFirm" class="lobbyingFirm">
+            Lobbying Firm
+        </div>
+
+        <div class="staffer">
+            Staffer
+        </div>
+
         <div id="chart" class="sankey">
-            <div id="agencyName" class="agency">
-                The Agency
-            </div>
         </div>
     </div>
 </body>
