--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         </div>
 
 
-        <!--<div class="columnHead">
-        <span class="totalBudget">Client</span>
-        <span class="instructionAndOperations">Lobbying Firm</span>
-        <span class="uses">Lobbyist</span>
-        </div>-->
+        <div class="columnHead">
+            <span class="totalBudget">Client</span>
+            <span class="instructionAndOperations">Lobbying Firm</span>
+            <span class="uses">Lobbyist</span>
+        </div>
 
         <div id="bars" class="agencies">
         </div>
