--- a/index-local.html
+++ b/index-local.html
@@ -18,6 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script>
 
     <script src="/site/lobbyists/lib/sankey.js"></script>
+    <script src="/site/lobbyists/lib/tip.js"></script>
     <script src="/site/lobbyists/js/lobbyists.js" type='text/javascript'></script>
 
     <link rel="stylesheet" type="text/css" href="/site/lobbyists/css/style.css">
