--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script src="https://d3js.org/queue.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script>
 
-    <script src="/lib/sankey.js"></script>
-    <script src="/js/lobbyists.js" type='text/javascript'></script>
+    <script src="lib/sankey.js"></script>
+    <script src="js/lobbyists.js"></script>
 
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
