Change css path

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <script src="lib/sankey.js"></script>
     <script src="js/lobbyists.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/css/layout.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/layout.css">
 </head>
 <body>
     <div class="container">
