--- a/lobbyists-sankey.html
+++ b/lobbyists-sankey.html
@@ -20,8 +20,8 @@
     <script src="lib/sankey.js"></script>
     <script src="js/lobbyists.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/css/layout.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/layout.css">
 </head>
 <body>
     <div class="container">
@@ -31,26 +31,18 @@
         </div>
 
 
+        <div class="columnHead">
+            <span class="totalBudget">Client</span>
+            <span class="instructionAndOperations">Lobbying Firm</span>
+            <span class="uses">Lobbyist</span>
+        </div>
+
         <div id="bars" class="agencies">
         </div>
-
-        <div id="agencyName" class="agency">
-            The Agency
-        </div>
-
-        <div id="client" class="client">
-            Client
-        </div>
-
-        <div id="lobbyingFirm" class="lobbyingFirm">
-            Lobbying Firm
-        </div>
-
-        <div class="staffer">
-            Staffer
-        </div>
-
-        <div id="chart" class="sankey">
+            <div id="chart" class="sankey">
+                <div id="agencyName" class="agency">
+                    The Agency
+                </div>
         </div>
     </div>
 </body>
