--- a/index.html
+++ b/index.html
@@ -1,50 +1,32 @@
-﻿<!--<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
+
 <head>
-    <title>The flow of Fairfax county money from revenue to expenditure</title>
+    <title>Trump Town Graphics</title>
+<style>
+
+body {
+    background: #fcfcfa;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+a {
+    font-weight: bold;
+    font-size: 18px;
+    color: #000;
+    text-decoration: none;
+}
+</style>
 </head>
+
+
 <body>
-    We need a "Sankey Diagram" like this:
-    <a href="http://bl.ocks.org/saraquigley/raw/5194141/">Imagine this is Fairfax budget money, not UC Berkley Student problems...the data has the same form</a>
+
+<br>
+<a href="lobbyists-sankey.html">Lobbyists - Sankey Diagram</a>
+<br><br>
+<a href="lobbyists-network.html">Lobbyists - Network Diagram</a>
+
 </body>
-</html>-->
 
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Former Lobbyists in the Trump Administration</title>
-    <script src="https://d3js.org/d3.v3.min.js"></script>
-    <script src="https://d3js.org/queue.v1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script>
-
-    <script src="lib/sankey.js"></script>
-    <script src="js/lobbyists.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/layout.css">
-</head>
-<body>
-    <div class="container">
-
-        <div class="title">
-            Former Lobbyists in Trump Administration
-        </div>
-
-
-        <div class="columnHead">
-            <span class="totalBudget">Client</span>
-            <span class="instructionAndOperations">Lobbying Firm</span>
-            <span class="uses">Lobbyist</span>
-        </div>
-
-        <div id="bars" class="agencies">
-        </div>
-            <div id="chart" class="sankey">
-                <div id="agencyName" class="agency">
-                    The Agency
-                </div>
-        </div>
-    </div>
-</body>
 </html>
-
