--- a/lobbyists-network.html
+++ b/lobbyists-network.html
@@ -31,6 +31,7 @@
     
     <script src="js/lobbyists-network.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="css/dc.css">
     <link rel="stylesheet" type="text/css" href="css/graph-style.css">
     <link rel="stylesheet" type="text/css" href="css/graph-layout.css">
 </head>
