Labels weren't in grid correctly

--- a/lobbyists-sankey.html
+++ b/lobbyists-sankey.html
@@ -31,19 +31,15 @@
         </div>
 
 
-        <div class="columnHead">
-            <span class="totalBudget">Client</span>
-            <span class="instructionAndOperations">Lobbying Firm</span>
-            <span class="uses">Lobbyist</span>
-        </div>
+        <div class="client">Client</div>
+        <div class="lobbyingFirm">Lobbying Firm</div>
+        <div class="staffer">Lobbyist</div>
 
-        <div id="bars" class="agencies">
-        </div>
-            <div id="chart" class="sankey">
-                <div id="agencyName" class="agency">
-                    The Agency
-                </div>
-        </div>
+
+
+        <div id="agencyName" class="agency">The Agency</div>
+        <div id="bars" class="agencies"></div>
+        <div id="chart" class="sankey"></div>
     </div>
 </body>
 </html>
